# nitro-enclaves-benchmarks

./: .gitignore  README.md  requirements.txt
aws/: .gitignore  README.md  awsenv  awsrc  requirements.txt  setup_ec2.sh  setup_env.sh  setup_r.sh  spot-options.json
aws/enclave_helper/: Dockerfile.client  Dockerfile.server  enclave_helper.py
microbenchmarks/SockLatency/: .gitignore  Makefile  README.md  expose-enclave-server.sh  expose-host-proxy.sh  expose-host-server.sh  prepare.sh  run-cross-instance.sh  run-proxy-local.sh  run-short.sh  run.sh
microbenchmarks/SockLatency/app/: CMakeLists.txt
microbenchmarks/SockLatency/app/include/: Client.hpp  Logger.hpp  Server.hpp  Utilities.hpp  myTypes.h  options.hpp
microbenchmarks/SockLatency/app/src/: Client.cpp  Logger.cpp  Server.cpp
microbenchmarks/SockLatency/deploy/: Dockerfile  Dockerfile-proxy  allocator.yaml
microbenchmarks/SockLatency/plot/: plot.R  plot.py
microbenchmarks/SockLatency/scripts/: run-client.sh  run-proxy.sh  run-server.sh
microbenchmarks/iperf/: Makefile  README.md  run_1_single_enclave.sh  run_2_multi.sh  run_3_message_sizes.sh  run_4a_expose_enclave.sh  run_4b_expose_host.sh  run_4c_cross_instance.sh
microbenchmarks/iperf/deploy/: allocator.yaml  client.Dockerfile  proxy.Dockerfile  server.Dockerfile
microbenchmarks/iperf/results/: combine_multi.py  convert_to_csv.py  plot.py
microbenchmarks/iperf/scripts/: bench-inet.sh  bench-multi.sh  bench-size.sh  bench.sh  run_clients.sh  run_proxies.sh  start_enclaves.sh  start_servers.sh
microbenchmarks/redis/: .gitignore  Makefile  README.md  expose-enclave-server.sh  expose-host-server.sh  run-1-compact.sh  run-2-proxied.sh  run-3-cross-instance.sh
microbenchmarks/redis/deploy/: Dockerfile  allocator.yaml
microbenchmarks/redis/plot/: plot.R  plot.py  util.R
microbenchmarks/redis/scripts/: benchmark-proxied.sh  benchmark.sh  compact-enclave.sh  compact.sh  expose.sh  proxy-tcp-2-tcp.sh  proxy-tcp-2-vsock.sh  proxy-vsock-2-tcp.sh  (+4 more)
(+6 files in other folders)
